[gd_scene load_steps=33 format=1]

[ext_resource path="res://src/scripts/game.gd" type="Script" id=1]
[ext_resource path="res://video/static/T_Dirt_Dark.jpg" type="Texture" id=2]
[ext_resource path="res://audio/game.smp" type="Sample" id=3]
[ext_resource path="res://audio/crawler/crawler1.smp" type="Sample" id=4]
[ext_resource path="res://audio/crawler/crawler2.smp" type="Sample" id=5]
[ext_resource path="res://audio/crawler/crawler3.smp" type="Sample" id=6]
[ext_resource path="res://audio/drednaught/drednaught1.smp" type="Sample" id=7]
[ext_resource path="res://audio/drednaught/drednaught2.smp" type="Sample" id=8]
[ext_resource path="res://audio/drednaught/drednaught3.smp" type="Sample" id=9]
[ext_resource path="res://audio/drednaught/drednaught4.smp" type="Sample" id=10]
[ext_resource path="res://audio/drednaught/drednaught5.smp" type="Sample" id=11]
[ext_resource path="res://audio/drednaught/drednaught6.smp" type="Sample" id=12]
[ext_resource path="res://audio/gameOver.smp" type="Sample" id=13]
[ext_resource path="res://audio/hero/hero1.smp" type="Sample" id=14]
[ext_resource path="res://audio/hero/hero2.smp" type="Sample" id=15]
[ext_resource path="res://audio/hero/hero3.smp" type="Sample" id=16]
[ext_resource path="res://audio/hero/hero4.smp" type="Sample" id=17]
[ext_resource path="res://audio/hits/hit_1.smp" type="Sample" id=18]
[ext_resource path="res://audio/hits/hit_2.smp" type="Sample" id=19]
[ext_resource path="res://audio/hits/hit_3.smp" type="Sample" id=20]
[ext_resource path="res://audio/hits/hit_4.smp" type="Sample" id=21]
[ext_resource path="res://audio/hits/hit_5.smp" type="Sample" id=22]
[ext_resource path="res://audio/oppressor/oppressor1.smp" type="Sample" id=23]
[ext_resource path="res://audio/oppressor/oppressor2.smp" type="Sample" id=24]
[ext_resource path="res://audio/oppressor/oppressor3.smp" type="Sample" id=25]
[ext_resource path="res://audio/oppressor/oppressor4.smp" type="Sample" id=26]
[ext_resource path="res://audio/oppressor/oppressor5.smp" type="Sample" id=27]
[ext_resource path="res://video/static/fog.png" type="Texture" id=28]
[ext_resource path="res://video/static/gameOver.png" type="Texture" id=29]

[sub_resource type="SampleLibrary" id=1]

samples/game = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[sub_resource type="SampleLibrary" id=2]

samples/crawler1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/crawler2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/crawler3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/drednaught1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/drednaught2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/drednaught3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/drednaught4 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/drednaught5 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/drednaught6 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/gameOver = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/hero1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/hero2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/hero3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/hero4 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/hit_1 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}
samples/hit_2 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/hit_3 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 20 )
}
samples/hit_4 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 21 )
}
samples/hit_5 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 22 )
}
samples/oppressor1 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 23 )
}
samples/oppressor2 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}
samples/oppressor3 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 25 )
}
samples/oppressor4 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 26 )
}
samples/oppressor5 = {
"db": -2.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 27 )
}

[sub_resource type="Animation" id=3]

resource/name = "GameOver"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="TextureFrame" parent="."]

visibility/visible = false
rect/scale = Vector2( 2.01, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = -50.0
margin/right = 511.0
margin/bottom = 462.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Battlefield" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UpPosition" type="Position2D" parent="Battlefield"]

transform/pos = Vector2( 512, -50 )

[node name="DownPosition" type="Position2D" parent="Battlefield"]

transform/pos = Vector2( 512, 650 )

[node name="LeftPosition" type="Position2D" parent="Battlefield"]

transform/pos = Vector2( -50, 300 )

[node name="RightPosition" type="Position2D" parent="Battlefield"]

transform/pos = Vector2( 1080, 300 )

[node name="UpLayer" type="CanvasLayer" parent="Battlefield"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="DownLayer" type="CanvasLayer" parent="Battlefield"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="LeftLayer" type="CanvasLayer" parent="Battlefield"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="RightLayer" type="CanvasLayer" parent="Battlefield"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GameMusic" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Blood" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Particles2D" type="Particles2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 515.581, 266.633 )
config/amount = 300
config/lifetime = 2.0
config/process_mode = 1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 90.0
params/gravity_strength = 20.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Fog" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="FogTexture" type="TextureFrame" parent="Fog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 28 )
stretch_mode = 0

[node name="GameOver" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GOSplash" type="TextureFrame" parent="GameOver"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
texture = ExtResource( 29 )
stretch_mode = 0

[node name="GOSAnimation" type="AnimationPlayer" parent="GameOver/GOSplash"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


